handle Unassigned department employees