@@ -2,6 +2,7 @@ package interview.example.ris.main.employeemanagement.service.impl;
 
 import interview.example.ris.main.employeemanagement.dto.response.DepartmentDto;
 import interview.example.ris.main.employeemanagement.entity.Department;
+import interview.example.ris.main.employeemanagement.entity.Employee;
 import interview.example.ris.main.employeemanagement.exception.DepartmentNotFoundException;
 import interview.example.ris.main.employeemanagement.repository.DepartmentRepository;
 import interview.example.ris.main.employeemanagement.repository.EmployeeRepository;
@@ -12,7 +13,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,7 +29,16 @@ public class DepartmentServiceImpl implements DepartmentService {
     @Override
     public List<DepartmentDto> getAllDepartments() {
         List<Department> departments = departmentRepository.findAll();
-        return departments.stream().map(this::toDepartmentDto).collect(Collectors.toList());
+        List<DepartmentDto> departmentDtoList = departments.stream().map(department ->
+            DepartmentDto.builder().name(department.getName())
+                    .numberOfEmployees(employeeRepository.countByDepartmentId(department.getId())).build()).toList();
+        List<Employee> unassignedEmployees = employeeRepository.findByDepartmentIsNull();
+        // Add unassigned department if there are unassigned employees
+        if (!unassignedEmployees.isEmpty()) {
+            departmentDtoList.add(DepartmentDto.builder().name("Unassigned")
+                    .numberOfEmployees((long) unassignedEmployees.size()).build());
+        }
+        return departmentDtoList;
     }
 
     @Override
@@ -57,14 +66,12 @@ public class DepartmentServiceImpl implements DepartmentService {
 
     @Override
     public void deleteDepartment(Long id) {
+        List<Employee> employees = employeeRepository.findByDepartmentId(id);
+        // Deleting an existing department moves all previously assigned employees to the "Unassigned" department
+        for (Employee employee : employees) {
+            employee.setDepartment(null);
+        }
+        employeeRepository.saveAll(employees);
         departmentRepository.deleteById(id);
-    }
-
-    private DepartmentDto toDepartmentDto(Department department) {
-        return DepartmentDto.builder()
-                .id(department.getId())
-                .name(department.getName())
-                .numberOfEmployees(employeeRepository.countByDepartmentId(department.getId()))
-                .build();
     }
 }
